<resources>
    <string name="app_name">CLOOVA</string>
    <string name="logo_text">CLOOVA</string>
    <string name="back_button_desc">Назад</string>
    <string name="not_available_short">Н/Д</string>
    <string name="not_specified">Не указано</string>
    <string name="skip">Пропустить</string>
    <string name="user_default_name">Пользователь</string>
    <string name="button_start_знакомство">Начать знакомство</string>
    <string name="button_already_have_profile">У меня уже есть профиль</string>
    <string name="main_subtitle">Стиль, который всегда в теме — с Cloova, ваш образ идеален в любую погоду!</string>
    <string name="login_subtitle">Рады вашему возвращению!\nCloova всегда готов подобрать\nидеальный образ!</string>
    <string name="login_label_colon">Логин:</string>
    <string name="password_label_colon">Пароль:</string>
    <string name="login_button_text">Войти</string>
    <string name="register_subtitle">Создайте аккаунт,\nчтобы начать подбирать\nидеальные образы!</string>
    <string name="username_placeholder">Имя пользователя</string>
    <string name="confirm_password_label_colon">Подтвердите пароль:</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="title_create_profile">Создание профиля</string>
    <string name="step_1">Шаг 1: Заполните информацию о себе</string>
    <string name="step_2">Шаг 2: Расскажите про ваш стиль</string>
    <string name="step_3">Шаг 3: Конфиденциальность</string>
    <string name="anketa">Более подробную анкету пройдите в вашем личном кабинете</string>
    <string name="name_label_colon">Имя:</string>
    <string name="gender_label_colon">Пол:</string>
    <string name="choose_colors">Выбрать цвета</string>
    <string name="choose_styles">Выбрать стили</string>
    <string name="choose_clothes">Выбрать одежду</string>
    <string name="choose_accessories">Выбрать аксессуары</string>
    <string name="date_hint">ДД.ММ.ГГГГ</string>
    <string name="birth_date_label_colon">Дата рождения:</string>
    <string name="button_next">Продолжить</string>
    <string name="button_next_short">Далее</string>
    <string name="button_create">Создать</string>
    <string name="registration_style_intro">Ваш стиль — наша забота! Давайте узнаем друг друга лучше, чтобы создавать образы, которые идеально подходят именно вам.</string>
    <string name="profile_name_label">Ваше имя</string>
    <string name="profile_name_hint">Введите ваше имя</string>
    <string name="city_label_colon">Город:</string>
    <string name="profile_city_hint">Введите ваш город</string>
    <string name="profile_style_label">Желаемые стили:</string>
    <string name="profile_colors_label">Предпочитаемые цвета:</string>
    <string name="profile_accessories_question">Какие аксессуары есть у вас?</string>
    <string name="profile_clothes_label">Главный принцип в одежде:</string>
    <string name="profile_clothes_hint">Какая одежда есть в вашем гардеробе?</string>
    <string name="save_button_text">Сохранить</string>
    <string name="save">Сохраненные образы</string>
    <string name="plan">Запланированные образы</string>
    <string name="profile_username">\@noname</string>
    <string name="setting_location_label">Город</string>
    <string name="setting_language_label">Язык приложения</string>
    <string name="language_value">Русский</string>
    <string name="setting_anketa_label">Моя анкета</string>
    <string name="setting_saved_label">Сохраненные образы</string>
    <string name="setting_planed_label">Запланированные образы</string>
    <string name="contact_devs">Связаться с разработчиками</string>
    <string name="logout_label">Выйти</string>
    <string name="delete">Удалить профиль</string>
    <string name="profile_activity_title">Профиль</string>
    <string name="style_not_selected">Стиль не выбран</string>
    <string name="button_save">Сохранить</string>
    <string name="button_delete_profile">Удалить профиль</string>
    <string name="app_language">Язык приложения</string>
    <string name="notific_lang">К сожалению, в Cloova пока не доступны другие языки, но мы активно работаем над их добавлением в ближайшее время!</string>
    <string name="choose_language">Выберете язык приложения:</string>
    <string name="russian_lang">Русский</string>
    <string name="english_lang">Английский</string>
    <string name="location">Местоположение</string>
    <string name="your_city">Ваш город:</string>
    <string name="city_saved">Город сохранен</string>
    <string name="error_saving">Ошибка сохранения</string>
    <string name="search_button_text">Поиск</string>
    <string name="profile_colors_label_ru">Предпочитаемые цвета</string>
    <string name="nolove_ru">Цвет, который бы не носил(а)</string>
    <string name="profile_clothes_label_ru">Главный принцип в одежде</string>
    <string name="profile_accessories_question_ru">Какие аксессуары у вас есть</string>
    <string name="profile_clothes_hint_ru">Какая одежда есть в вашем гардеробе</string>
    <string name="sochetanie_ru">Есть ли одежда, которую не будешь сочетать</string>
    <string name="situazia_ru">Для каких ситуаций чаще всего нужно собирать образы</string>
    <string name="komfort_ru">Что для тебя важнее, комфорт или внешний вид</string>
    <string name="done_ru">Готово</string>
    <string name="cancel_ru">Отмена</string>
    <string name="selected_ru">Выбрано: </string>
    <string name="anketa_submitted_ru">Анкета отправлена!</string>
    <string-array name="colors_array">
        <item>Красный</item>
        <item>Белый</item>
        <item>Зелёный</item>
        <item>Чёрный</item>
    </string-array>
    <string-array name="no_love_colors">
        <item>Жёлтый</item>
        <item>Розовый</item>
        <item>Фиолетовый</item>
    </string-array>
    <string-array name="clothing_principles">
        <item>Официально</item>
        <item>Свободно</item>
        <item>Ярко</item>
    </string-array>
    <string-array name="accessories_array">
        <item>Шляпа</item>
        <item>Очки</item>
        <item>Перчатки</item>
    </string-array>
    <string-array name="wardrobe_clothes">
        <item>Футболка</item>
        <item>Шорты</item>
        <item>Майка</item>
        <item>Джинсы</item>
        <item>Пальто</item>
    </string-array>
    <string-array name="no_combination_clothes">
        <item>Футболка и пиджак</item>
        <item>Шорты и колготки</item>
        <item>Майка и кофта</item>
        <item>Джинсы и туфли</item>
        <item>Пальто и шапка</item>
    </string-array>
    <string-array name="situations">
        <item>Университет</item>
        <item>Вечеринка</item>
        <item>Прогулка</item>
        <item>Ресторан</item>
    </string-array>
    <string-array name="priority_options">
        <item>Комфорт</item>
        <item>Внешний вид</item>
    </string-array>
    <string-array name="cities_array">
        <item>Выберите город</item> 
        <item>Самара</item>
        <item>Тольятти</item>
        <item>Москва</item>
        
    </string-array>
    <string-array name="sex_array">
        <item>Выберите пол</item> 
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string-array name="style_array">
        
        <item>Классический</item>
        <item>Спортивный</item>
        <item>Деловой</item>
        <item>Свободный</item>
        
    </string-array>
    <string name="edit_profile_title">Редактировать</string>
    <string name="navigation_drawer_open">Открыть меню навигации</string>
    <string name="navigation_drawer_close">Закрыть меню навигации</string>
    <string name="menu_home">Главная</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_other">Другое</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_logout">Выход</string>
    <string name="error_auth">Ошибка авторизации</string>
    <string name="error_loading_profile_data">Не удалось загрузить данные профиля</string>
    <string name="error_user_data_not_found">Данные пользователя не найдены</string>
    <string name="error_open_link">Не удалось открыть ссылку</string>
    <string name="todo_location_settings">Переход к настройкам местоположения (TODO)</string>
    <string name="todo_language_settings">Переход к настройкам языка (TODO)</string>
    <string name="todo_questionnaire">Переход к анкете (TODO)</string>
    <string name="todo_saved_looks">Переход к сохраненным образам (TODO)</string>
    <string name="todo_planned_looks">Переход к запланированным образам (TODO)</string>
    <string name="todo_go_home">Переход на главный экран (TODO)</string>
    <string name="todo_go_settings">Переход на настройки (TODO)</string>
    <string name="cloud">Погода</string>
    <string name="weather_forecast_title">Прогноз на ближайшие дни</string>
    <string name="outfit_button_desc">Подобрать образ</string>
    <string name="day_label">День</string>
    <string name="night_label">Ночь</string>
    <string name="look_label">Образ</string>
    <string name="monthly_forecast_button">Прогноз на месяц</string>
    <string name="day_detail_activity_title">Прогноз на %1$s</string>
    <string name="wind_label">Ветер</string>
    <string name="humidity_label">Влажность</string>
    <string name="weekly_forecast_link">Прогноз на ближайшие дни</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="edit_outfit_button">Редактировать образ</string>
    <string name="save_outfit_button">Сохранить образ</string>
    <string name="refresh_button">Обновить</string>
    <string name="wind_label_short">Ветер</string>
    <string name="humidity_label_short">Влажность</string>
    <string name="outfit_suggestion_placeholder">Подбираем ваш сегодняшний образ...</string>
    <string name="outfit_no_suitable_clothes">К сожалению, не удалось найти подходящую одежду по вашим критериям.</string>
    <string name="outfit_no_complete_set">Не удалось собрать полный комплект, но вот что мы подобрали:</string>
    <string name="mannequin_desc">Манекен с предложенной одеждой</string>
    <string name="my_anketa">Моя анкета</string>
    <string name="saave">Сохранить</string>
    <string name="sochetanie">Есть ли одежда, которую ты не будешь сочетать друг с другом?</string>
    <string name="nolove">Цвет, которой бы не носил(а)</string>
    <string name="situazia">Для каких ситуаций тебе чаще всего нужно собирать образы?</string>
    <string name="komfort">Что для тебя важнее в образе: комфорт или внешний вид?</string>
    <string name="vibor">Выбрать</string>
    <string name="outfit_no_complete_set_fallback">Не удалось собрать полный комплект. Попробуйте изменить критерии или обновить каталог одежды.</string>
    <string name="recommended_outfit_title">Рекомендуемый образ:</string>
    <string name="error_loading_user_data">Ошибка загрузки данных пользователя.</string>
    <string name="error_auth_save_outfit">Ошибка: пользователь не авторизован для сохранения образа.</string>
    <string name="outfit_cannot_save_empty">Невозможно сохранить пустой образ.</string>
    <string name="saving_outfit">Сохранение образа...</string>
    <string name="outfit_saved_successfully">Образ успешно сохранен!</string>
    <string name="error_saving_outfit">Ошибка при сохранении образа.</string>
    <string name="saved_looks_title">Сохраненные образы</string>
    <string name="no_saved_looks_message">У вас пока нет сохраненных образов.</string>
    <string name="back_button_text">Назад</string>
    <string name="delete_outfit_cd">Удалить образ</string>
    <string name="outfit_delete_successful">Образ удален.</string>
    <string name="outfit_delete_failed">Ошибка при удалении образа.</string>
    <string name="delete_confirmation_title">Удалить образ?</string>
    <string name="delete_confirmation_message">Вы уверены, что хотите удалить этот образ? Это действие нельзя отменить.</string>
    <string name="yes">Да</string>
</resources>