<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/cloud"
            android:title="@string/cloud"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person"
            android:title="@string/profile_activity_title" />
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>