<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sohr"
    android:background="@color/fon_reg"
    tools:context=".Anketa"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="282dp"
        android:src="@drawable/temn"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null"/>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="345dp"
        android:src="@drawable/svetl"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null"/>

    <Button
        android:id="@+id/gobackbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/chevron_left"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:onClick="Myhome"
        android:padding="12dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="268dp"
        android:src="@drawable/temni_2_3_snizu"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_marginTop="50dp"
        android:layout_width="349dp"
        android:layout_height="72dp"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center"
        android:text="@string/my_anketa"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/Scroll"
        android:layout_width="335dp"
        android:layout_height="550dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="425dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_white_bg"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/profile_colors_label"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSelectColors"
                android:layout_width="match_parent"
                android:backgroundTint="@color/blue"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/vibor"/>


            <TextView
                android:id="@+id/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_bold"
                android:labelFor="@id/nameEditText"
                android:text="@string/nolove"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/colors"
                android:layout_width="match_parent"
                android:backgroundTint="@color/blue"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/vibor"/>

            <TextView
                android:id="@+id/Text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_bold"
                android:labelFor="@id/nameEditText"
                android:text="@string/profile_clothes_label"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/bnSelectStyles"
                android:layout_width="match_parent"
                android:backgroundTint="@color/blue"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/vibor"/>

            <TextView
                android:id="@+id/Text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/profile_accessories_question"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <Button
                android:id="@+id/btnSelectAccessories"
                android:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/vibor"/>

            <TextView
                android:id="@+id/Text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/profile_clothes_hint"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <Button
                android:id="@+id/btnSelectClothes"
                android:backgroundTint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/vibor"/>


            <TextView
                android:id="@+id/Text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_bold"
                android:labelFor="@id/nameEditText"
                android:text="@string/sochetanie"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSelectSoch"
                android:layout_width="match_parent"
                android:backgroundTint="@color/blue"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/vibor"/>

            <TextView
                android:id="@+id/Text86"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_bold"
                android:labelFor="@id/nameEditText"
                android:text="@string/situazia"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSelectStyles"
                android:layout_width="match_parent"
                android:backgroundTint="@color/blue"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/vibor"/>

            <TextView
                android:id="@+id/Textt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_bold"
                android:labelFor="@id/nameEditText"
                android:text="@string/komfort"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSelectVid"
                android:layout_width="match_parent"
                android:backgroundTint="@color/blue"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/vibor"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/createButton"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/manrope_bold"
        android:onClick="Myhome_2"
        android:text="@string/saave"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Scroll" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/navigation_panel_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/profile_shape"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="@null"
            android:backgroundTint="@color/navigation_panel_color"
            android:foreground="@drawable/profile_shape"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/main_house_shape"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:clickable="true"
            android:focusable="true"
            android:background="@null"
            android:backgroundTint="@color/navigation_panel_color"
            android:foreground="@drawable/main_house_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/heart_shape"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:clickable="true"
            android:focusable="true"
            android:background="@null"
            android:backgroundTint="@color/navigation_panel_color"
            android:foreground="@drawable/heart_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>