<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon_reg"
    tools:context=".Registration_step3">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/svetli_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/svetli_3_snizu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@null"/>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/temni_3_snizu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@null"/>

    <Button
        android:id="@+id/gobackbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="8dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/strelka"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:contentDescription="@string/strelka"/>

    <TextView
        android:id="@+id/logoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/marcellus"
        android:text="@string/logo_text"
        android:textColor="@color/login_dark_blue"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/registration_style_intro"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoTextView" />


    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edit_text"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Linear">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:labelFor="@id/loginEditText"
            android:text="@string/login_label_colon"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/loginEditText"
            android:layout_height="35dp"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/rounded_gray_edittext_bg"
            android:backgroundTint="@color/login_input_gray"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/nameLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/manrope_bold"
            android:labelFor="@id/passwordEditText"
            android:text="@string/password_label_colon"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/rounded_gray_edittext_bg"
            android:backgroundTint="@color/login_input_gray"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/nameLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/manrope_bold"
            android:labelFor="@id/confPasswordEditText"
            android:text="@string/confirm_password_label_colon"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/confPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/rounded_gray_edittext_bg"
            android:backgroundTint="@color/login_input_gray"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="334dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/title_create_profile"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/step_3"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/createButton"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/button_create"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />
    <!--android:onClick="onNextClick"-->


</androidx.constraintlayout.widget.ConstraintLayout>